--- a/trunk/099/pkg/magic/bardmasteries/spells.cfg
+++ b/trunk/099/pkg/magic/bardmasteries/spells.cfg
@@ -3,10 +3,11 @@ Spell 701
 	SpellId		701
 	Name			Inspire
 	Script		:statmod_spells:clumsy
-	Circle		1
-	PowerWords	Uus Jux 
-	Reagent		bloodmoss
-	Reagent		nightshade
+	PowerWords	Uus Por
+	Difficulty		100
+	Mana			16
+	Delay			1000
+	PointValue		0
 }
 
 Spell 702
@@ -14,11 +15,11 @@ Spell 702
 	SpellId		702
 	Name			Invigorate
 	Script		:misc_spells:create_food
-	Circle		1                
-	PowerWords	In Mani Ylem     
-	Reagent		garlic       
-	Reagent		ginseng    
-	Reagent		MandrakeRoot     
+	PowerWords	An Zu
+	Difficulty		100
+	Mana			22
+	Delay			1000
+	PointValue		0
 }
 
 Spell 703
@@ -26,10 +27,11 @@ Spell 703
 	SpellId		703
 	Name			Resilience
 	Script		:statmod_spells:feeblemind
-	Circle		2
-	PowerWords	Rel Wis 
-	Reagent		nightshade
-	Reagent		ginseng
+	PowerWords	Kal Mani Tym
+	Difficulty		100
+	Mana			16
+	Delay			1000
+	PointValue		0
 }
 
 Spell 704
@@ -37,11 +39,11 @@ Spell 704
 	SpellId		704
 	Name			Perseverance
 	Script		:misc_spells:heal
-	Circle		2
-	PowerWords	In Mani 
-	Reagent		garlic
-	Reagent		ginseng
-	Reagent		spidersilk
+	PowerWords	Uus Jux Sanct
+	Difficulty		100
+	Mana			18
+	Delay			1000
+	PointValue		0
 }
 
 Spell  705
@@ -49,10 +51,11 @@ Spell  705
 	SpellId		705
 	Name			Tribulation
 	Script		:damage_spells:magicarrow
-	Circle		3
-	PowerWords	In Por Ylem
-	Reagent		blackpearl
-	Reagent		nightshade
+	PowerWords	In Jux Hur Rel
+	Difficulty		100
+	Mana			24
+	Delay			1000
+	PointValue		0
 }
 
 Spell 706
@@ -60,8 +63,9 @@ Spell 706
 	SpellId		706
 	Name			Despair
 	Script		:misc_spells:nightsight
-	Circle		3
-	PowerWords	In Lor 
-	Reagent		spidersilk
-	Reagent		SulphurousAsh
+	PowerWords	Kal Des Mani Tym
+	Difficulty		100
+	Mana			26
+	Delay			1000
+	PointValue		0
 }
