--- a/trunk/099/pkg/magic/mysticism/spells.cfg
+++ b/trunk/099/pkg/magic/mysticism/spells.cfg
@@ -3,10 +3,10 @@ Spell 678
 	SpellId		678
 	Name			Nether Bolt
 	Script		:statmod_spells:clumsy
-	Circle		1
-	PowerWords	Uus Jux 
-	Reagent		bloodmoss
-	Reagent		nightshade
+	Circle		11
+	PowerWords	In Corp Ylem
+	Reagent		blackpearl
+	Reagent		sulphurousash
 }
 
 Spell 679
@@ -14,56 +14,62 @@ Spell 679
 	SpellId		679
 	Name			Healing Stone
 	Script		:misc_spells:create_food
-	Circle		1                
-	PowerWords	In Mani Ylem     
+	Circle		11
+	PowerWords	Kal In Mani
+	Reagent		bone
 	Reagent		garlic       
 	Reagent		ginseng    
-	Reagent		MandrakeRoot     
+	Reagent		spidersilk
 }
 
 Spell 680
 {                                
 	SpellId		680
-	Name			Enchant
-	Script		:statmod_spells:feeblemind
-	Circle		2
-	PowerWords	Rel Wis 
-	Reagent		nightshade
-	Reagent		ginseng
+	Name			Purge Magic
+	Script		:misc_spells:heal
+	Circle		12
+	PowerWords	An Ort Sanct
+	Reagent		fertiledirt
+	Reagent		garlic
+	Reagent		mandrakeroot
+	Reagent		sulphurousash
 }
 
 Spell 681
 {                                
 	SpellId		681
-	Name			Purge Magic
-	Script		:misc_spells:heal
-	Circle		2
-	PowerWords	In Mani 
-	Reagent		garlic
-	Reagent		ginseng
+	Name			Enchant
+	Script		:statmod_spells:feeblemind
+	Circle		12
+	PowerWords	In Ort Ylem
+	Reagent		mandrakeroot
 	Reagent		spidersilk
+	Reagent		sulphurousash
 }
 
-Spell  682
-{
+Spell 682
+{                                
 	SpellId		682
-	Name			Eagle Strike
-	Script		:damage_spells:magicarrow
-	Circle		3
-	PowerWords	In Por Ylem
+	Name			Sleep
+	Script		:misc_spells:nightsight
+	Circle		13
+	PowerWords	In Zu
 	Reagent		blackpearl
+	Reagent		spidersilk
 	Reagent		nightshade
 }
 
-Spell 683
-{                                
+Spell  683
+{
 	SpellId		683
-	Name			Sleep
-	Script		:misc_spells:nightsight
-	Circle		3
-	PowerWords	In Lor 
+	Name			Eagle Strike
+	Script		:damage_spells:magicarrow
+	Circle		13
+	PowerWords	Kal Por Xen
+	Reagent		bloodmoss
+	Reagent		bone
 	Reagent		spidersilk
-	Reagent		SulphurousAsh
+	Reagent		mandrakeroot
 }
 
 Spell 684
@@ -71,11 +77,12 @@ Spell 684
 	SpellId		684
 	Name			Animated Weapon
 	Script		:statmod_spells:reactivearmor
-	Circle		4
-	PowerWords	Flam Sanct 
-	Reagent		garlic
-	Reagent		spidersilk
-	Reagent		SulphurousAsh
+	Circle		14
+	PowerWords	In Jux Por Ylem
+	Reagent		bone
+	Reagent		blackpearl
+	Reagent		mandrakeroot
+	Reagent		nightshade
 }
 
 Spell 685
@@ -83,77 +90,90 @@ Spell 685
 	SpellId		685
 	Name			Stone Form
 	Script		:statmod_spells:weaken
-	Circle		4
-	PowerWords	Des Mani
+	Circle		14
+	PowerWords	In Rel Ylem
+	Reagent		bloodmoss
 	Reagent		garlic
-	Reagent		nightshade
+	Reagent		fertiledirt
 }
 
 Spell 686
 {                                
 	SpellId		686
-	Name			Mass Sleep
-	Script		:statmod_spells:agility
-	Circle		5
-	PowerWords	Ex Uus  
-	Reagent		bloodmoss
+	Name			Spell Trigger
+	Script		:statmod_spells:cunning
+	Circle		15
+	PowerWords	In Vas Ort Ex
+	Reagent		dragonsblood
+	Reagent		garlic
 	Reagent		mandrakeroot
+	Reagent		spidersilk
 }
 
 Spell 687
 {                                
 	SpellId		687
-	Name			Spell Trigger
-	Script		:statmod_spells:cunning
-	Circle		5
-	PowerWords	Uus Wis  
-	Reagent		Nightshade
-	Reagent		mandrakeroot
-}
-
-Spell 688
-{
-	SpellId		688
-	Name			Bombard
-	Script		:poison_spells:cure
-	Circle		6
-	PowerWords	An Nox
-	Reagent		garlic
+	Name			Mass Sleep
+	Script		:statmod_spells:agility
+	Circle		15
+	PowerWords	Vas Zu
 	Reagent		ginseng
-}  
-
-Spell 689
-{                                
-	SpellId		689
-	Name			Cleansing Winds
-	Script		:damage_spells:harm
-	Circle		6
-	PowerWords	An Mani 
 	Reagent		nightshade
 	Reagent		spidersilk
 }
 
+Spell 688
+{                                
+	SpellId		688
+	Name			Cleansing Winds
+	Script		:damage_spells:harm
+	Circle		16
+	PowerWords	In Vas Mani Hur
+	Reagent		dragonsblood
+	Reagent		garlic
+	Reagent		ginseng
+	Reagent		mandrakeroot
+}
+
+Spell 689
+{
+	SpellId		689
+	Name			Bombard
+	Script		:poison_spells:cure
+	Circle		16
+	PowerWords	Corp Por Ylem
+	Reagent		bloodmoss
+	Reagent		dragonsblood
+	Reagent		garlic
+	Reagent		sulphurousash
+}  
+
 Spell 690
 {                                
 	SpellId		690
-	Name			Hail Storm
-	Script		:statmod_spells:protection
-	Circle		7
-	PowerWords	Uus Sanct  
+	Name			Spell Plague
+	Script		:statmod_spells:strength
+	Circle		17
+	PowerWords	Vas Rel Jux Ort
+	Reagent		daemonbone
+	Reagent		dragonsblood
 	Reagent		garlic
-	Reagent		ginseng
-	Reagent		SulphurousAsh
+	Reagent		mandrakeroot
+	Reagent		nightshade     
+	Reagent		sulphurousash
 }
 
 Spell 691
 {                                
 	SpellId		691
-	Name			Spell Plague
-	Script		:statmod_spells:strength
-	Circle		7
-	PowerWords	Uus Mani
+	Name			Hail Storm
+	Script		:statmod_spells:protection
+	Circle		17
+	PowerWords	Kal Des Ylem
+	Reagent		dragonsblood
+	Reagent		bloodmoss
+	Reagent		blackpearl
 	Reagent		mandrakeroot
-	Reagent		nightshade     
 }
 
 Spell 692
@@ -161,10 +181,12 @@ Spell 692
 	SpellId		692
 	Name			Nether Cyclone
 	Script		:statmod_spells:bless
-	Circle		8
-	PowerWords	Rel Sanct  
+	Circle		18
+	PowerWords	Grav Hur
+	Reagent		bloodmoss
 	Reagent		mandrakeroot
-	Reagent		garlic
+	Reagent		nightshade
+	Reagent		sulphurousash
 }
 
 Spell 693
@@ -172,8 +194,12 @@ Spell 693
 	SpellId		693
 	Name			Rising Colossus
 	Script		:damage_spells:fireball
-	Circle		8
-	PowerWords	Vas Flam
+	Circle		18
+	PowerWords	Kal Vas Xen Corp Ylem
 	Reagent		blackpearl
-	Reagent		sulphurousash
+	Reagent		daemonbone
+	Reagent		dragonsblood
+	Reagent		fertiledirt
+	Reagent		mandrakeroot
+	Reagent		nightshade
 }
