--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -1957,8 +1957,8 @@ Weapon 0x4068
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
+	Anim			0xC
+	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
 	blockcircle	1
@@ -2215,7 +2215,7 @@ Weapon 0x4075
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1D
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2280,7 +2280,7 @@ Weapon 0x48b0
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1D
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2302,7 +2302,7 @@ Weapon 0x48b2
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1D
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2324,7 +2324,7 @@ Weapon 0x48b4
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1D
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2449,17 +2449,18 @@ Weapon 0x48c0
 {
 	Name			GargishWarHammer
 	Desc			gargish war hammer
-	Speed		35
-	Damage		4d6+3
+	Speed		23
+	Damage		6d6+3
 	Attribute		Mace
-	MaxHP		100
+	MaxHP		200
 	HitSound		0x13C
 	MissSound		0x234
-	Anim			0xB
+	Anim			0xC
 	MountedAnim	0x1A
 	VendorSellsFor	70
 	VendorBuysFor	20
 	blockcircle	1
+	TwoHanded		1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2498,7 +2499,7 @@ Weapon 0x48c4
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0x9
+	Anim			0xC
 	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2520,7 +2521,7 @@ Weapon 0x48c6
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0x9
+	Anim			0xB
 	MountedAnim	0x1A
 	VendorSellsFor	150
 	VendorBuysFor	60
@@ -2563,7 +2564,7 @@ Weapon 0x48ca
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xA
+	Anim			0xE
 	MountedAnim	0x1A
 	VendorSellsFor	150
 	VendorBuysFor	60
@@ -2606,7 +2607,7 @@ Weapon 0x48ce
 	MaxHP		200
 	HitSound		0x23D
 	MissSound		0x23B
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -2629,7 +2630,7 @@ Weapon 0x48d0
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
+	Anim			0xC
 	MountedAnim	0x1D
 	VendorSellsFor	200
 	VendorBuysFor	80
