--- a/trunk/099/pkg/items/doors/itemdesc.cfg
+++ b/trunk/099/pkg/items/doors/itemdesc.cfg
@@ -1406,3 +1406,112 @@ Door 0x1FFB
     doortype metal
 }
 
+// Samurai Empire doors
+Door 0x2A05
+{
+    Name    SlidingPaperDoorSW
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A07
+{
+    Name    SlidingPaperDoorSE
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A09
+{
+    Name    SlidingPaperDoorES
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A0B
+{
+    Name    SlidingPaperDoorEN
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A0D
+{
+    Name    SlidingClothDoorSW
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A0F
+{
+    Name    SlidingClothDoorSE
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A11
+{
+    Name    SlidingClothDoorES
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A13
+{
+    Name    SlidingPaperDoorEN
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A15
+{
+    Name    SlidingWoodenDoorSW
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A17
+{
+    Name    SlidingWoodenDoorSE
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A19
+{
+    Name    SlidingWoodenDoorES
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
+Door 0x2A1B
+{
+    Name    SlidingWoodenDoorEN
+    xmod    0
+    ymod    0
+    script  door
+    doortype sliding
+}
+
