--- a/099/pkg/items/doors/itemdesc.cfg
+++ b/099/pkg/items/doors/itemdesc.cfg
@@ -1406,10 +1406,44 @@ Door 0x1FFB
     doortype metal
 }
 
-// Samurai Empire doors
+//////////////////////////
+// Samurai Empire doors //
+//////////////////////////
+
+// Black wooden doors
+
+Door 0x241f
+{
+    Name    BlackWoodenDoorENE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x2421
+{
+    Name    BlackWindowedDoorSSE
+    xmod    0
+    ymod    +1
+    script  door
+    doortype wood
+}
+
+Door 0x2423
+{
+    Name    BlackWoodenDoorSSE
+    xmod    0
+    ymod    +1
+    script  door
+    doortype wood
+}
+
+// Paper sliding doors
+
 Door 0x2A05
 {
-    Name    SlidingPaperDoorSW
+    Name    PaperSlidingDoorSW
     xmod    0
     ymod    0
     script  door
@@ -1418,7 +1452,7 @@ Door 0x2A05
 
 Door 0x2A07
 {
-    Name    SlidingPaperDoorSE
+    Name    PaperSlidingDoorSE
     xmod    0
     ymod    0
     script  door
@@ -1427,7 +1461,7 @@ Door 0x2A07
 
 Door 0x2A09
 {
-    Name    SlidingPaperDoorES
+    Name    PaperSlidingDoorES
     xmod    0
     ymod    0
     script  door
@@ -1436,16 +1470,18 @@ Door 0x2A09
 
 Door 0x2A0B
 {
-    Name    SlidingPaperDoorEN
+    Name    PaperSlidingDoorEN
     xmod    0
     ymod    0
     script  door
     doortype sliding
 }
 
+// Cloth sliding doors
+
 Door 0x2A0D
 {
-    Name    SlidingClothDoorSW
+    Name    ClothSlidingDoorSW
     xmod    0
     ymod    0
     script  door
@@ -1454,7 +1490,7 @@ Door 0x2A0D
 
 Door 0x2A0F
 {
-    Name    SlidingClothDoorSE
+    Name    ClothSlidingDoorSE
     xmod    0
     ymod    0
     script  door
@@ -1463,7 +1499,7 @@ Door 0x2A0F
 
 Door 0x2A11
 {
-    Name    SlidingClothDoorES
+    Name    ClothSlidingDoorES
     xmod    0
     ymod    0
     script  door
@@ -1472,16 +1508,18 @@ Door 0x2A11
 
 Door 0x2A13
 {
-    Name    SlidingPaperDoorEN
+    Name    ClothSlidingDoorEN
     xmod    0
     ymod    0
     script  door
     doortype sliding
 }
 
+// Wooden sliding doors
+
 Door 0x2A15
 {
-    Name    SlidingWoodenDoorSW
+    Name    WoodenSlidingDoorSW
     xmod    0
     ymod    0
     script  door
@@ -1490,7 +1528,7 @@ Door 0x2A15
 
 Door 0x2A17
 {
-    Name    SlidingWoodenDoorSE
+    Name    WoodenSlidingDoorSE
     xmod    0
     ymod    0
     script  door
@@ -1499,7 +1537,7 @@ Door 0x2A17
 
 Door 0x2A19
 {
-    Name    SlidingWoodenDoorES
+    Name    WoodenSlidingDoorES
     xmod    0
     ymod    0
     script  door
@@ -1508,10 +1546,807 @@ Door 0x2A19
 
 Door 0x2A1B
 {
-    Name    SlidingWoodenDoorEN
+    Name    WoodenSlidingDoorEN
     xmod    0
     ymod    0
     script  door
     doortype sliding
+}
+
+////////////////////////////
+// Mondain's Legacy doors //
+///////////////////////////
+
+// Elven wooden doors
+
+Door 0x2d46
+{
+    Name    ElvenWoodenDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x2d48
+{
+    Name    ElvenWoodenDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x31ac
+{
+    Name    ElvenWoodenDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype metal
+}
+
+Door 0x31ae
+{
+    Name    ElvenWoodenDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype metal
+}
+
+// Elven simple doors
+
+Door 0x2d63
+{
+    Name    ElvenSimpleDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x2d65
+{
+    Name    ElvenSimpleDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x31a0
+{
+    Name    ElvenSimpleDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+Door 0x31a2
+{
+    Name    ElvenSimpleDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+// Elven ornate doors
+
+Door 0x2d67
+{
+    Name    ElvenOrnateDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x2d69
+{
+    Name    ElvenOrnateDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x31a4
+{
+    Name    ElvenOrnateDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x31a6
+{
+    Name    ElvenOrnateDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+// Elven plain doors
+
+Door 0x2d6b
+{
+    Name    ElvenPlainDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x2d6d
+{
+    Name    ElvenPlainDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x31a8
+{
+    Name    ElvenPlainDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x31aa
+{
+    Name    ElvenPlainDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+// Elven moon doors
+
+Door 0x2fe2
+{
+    Name    ElvenMoonDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x2fe4
+{
+    Name    ElvenMoonDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x319c
+{
+    Name    ElvenMoonDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x319e
+{
+    Name    ElvenMoonDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+// Crystal doors
+
+Door 0x367b
+{
+    Name    CrystalDoorSSW
+    xmod    -1
+    ymod    +1
+    script  door
+    doortype metal
+}
+
+Door 0x367d
+{
+    Name    CrystalDoorSSE
+    xmod    +1
+    ymod    +1
+    script  door
+    doortype metal
+}
+
+Door 0x367f
+{
+    Name    CrystalDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype metal
+}
+
+Door 0x3681
+{
+    Name    CrystalDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype metal
+}
+
+Door 0x3683
+{
+    Name    CrystalDoorESE
+    xmod    +1
+    ymod    +1
+    script  door
+    doortype metal
+}
+
+Door 0x3685
+{
+    Name    CrystalDoorENE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype metal
+}
+
+Door 0x3687
+{
+    Name    CrystalDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype metal
+}
+
+Door 0x3689
+{
+    Name    CrystalDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype metal
+}
+
+// Shadow doors
+
+Door 0x368b
+{
+    Name    ShadowDoorSSW
+    xmod    -1
+    ymod    +1
+    script  door
+    doortype wood
+}
+
+Door 0x368d
+{
+    Name    ShadowDoorSSE
+    xmod    +1
+    ymod    +1
+    script  door
+    doortype wood
+}
+
+Door 0x368f
+{
+    Name    ShadowDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x3691
+{
+    Name    ShadowDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x3693
+{
+    Name    ShadowDoorESE
+    xmod    +1
+    ymod    +1
+    script  door
+    doortype wood
+}
+
+Door 0x3695
+{
+    Name    ShadowDoorENE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x3697
+{
+    Name    ShadowDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x3699
+{
+    Name    ShadowDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+/////////////////////////
+// Stygian Abyss doors //
+////////////////////////
+
+// 0x409b - 0x40a2 Gargish Traditional doors
+
+Door 0x409b
+{
+    Name    GargishTraditionalDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x409d
+{
+    Name    GargishTraditionalDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x409f
+{
+    Name    GargishTraditionalDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x40a1
+{
+    Name    GargishTraditionalDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x410c - 0x4113 Gargish doors
+
+Door 0x410c
+{
+    Name    GargishDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x410e
+{
+    Name    GargishDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4110
+{
+    Name    GargishDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4112
+{
+    Name    GargishDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x41c2 - 0x41c9 Gargish Celestial doors
+
+Door 0x41c2
+{
+    Name    GargishCelestialDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x41c4
+{
+    Name    GargishCelestialDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x41c6
+{
+    Name    GargishCelestialDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x41c8
+{
+    Name    GargishCelestialDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x41cf - 0x41d6 Gargish Progressive doors
+
+Door 0x41cf
+{
+    Name    GargishProgressiveDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x41d1
+{
+    Name    GargishProgressiveDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x41d3
+{
+    Name    GargishProgressiveDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x41d5
+{
+    Name    GargishProgressiveDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x436e - 0x437d Gargish Renaissance doors, Gargish Draxinusom doors
+
+Door 0x436e
+{
+    Name    GargishRenaissanceDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4370
+{
+    Name    GargishRenaissanceDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4372
+{
+    Name    GargishDraxinusomDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4374
+{
+    Name    GargishDraxinusomDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4376
+{
+    Name    GargishRenaissanceDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4378
+{
+    Name    GargishRenaissanceDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x437a
+{
+    Name    GargishDraxinusomDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x437c
+{
+    Name    GargishDraxinusomDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x46dd - 0x46e4 Gargish Hovel doors
+
+Door 0x46dd
+{
+    Name    GargishHovelDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x46df
+{
+    Name    GargishHovelDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+Door 0x46e1
+{
+    Name    GargishHovelDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype wood
+}
+
+Door 0x46e3
+{
+    Name    GargishHovelDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype wood
+}
+
+// 0x4d1a - 0x4d29 Gargish Queen's Blue doors
+
+Door 0x4d1a
+{
+    Name    GargishQueenBlueDoorHSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4d1c
+{
+    Name    GargishQueenBlueDoorHSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4d1e
+{
+    Name    GargishQueenBlueDoorHESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4d20
+{
+    Name    GargishQueenBlueDoorHENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4d22
+{
+    Name    GargishQueenBlueDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4d24
+{
+    Name    GargishQueenBlueDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x4d26
+{
+    Name    GargishQueenBlueDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x4d28
+{
+    Name    GargishQueenBlueDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x50c8 - 0x50cf Gargish Queen's Red doors
+
+Door 0x50c8
+{
+    Name    GargishQueenRedDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x50ca
+{
+    Name    GargishQueenRedDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x50cc
+{
+    Name    GargishQueenRedDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x50ce
+{
+    Name    GargishQueenRedDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x50d0 - 0x50d7 Gargish Bentas doors
+
+Door 0x50d0
+{
+    Name    GargishBentasDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x50d2
+{
+    Name    GargishBentasDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+Door 0x50d4
+{
+    Name    GargishBentasDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype stone
+}
+
+Door 0x50d6
+{
+    Name    GargishBentasDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype stone
+}
+
+// 0x5142 - 0x5149 Gargish Folsom doors
+
+Door 0x5142
+{
+    Name    GargishFolsomDoorSNW
+    xmod    -1
+    ymod    0
+    script  door
+    doortype metal
+}
+
+Door 0x5144
+{
+    Name    GargishFolsomDoorSNE
+    xmod    +1
+    ymod    -1
+    script  door
+    doortype metal
+}
+
+Door 0x5146
+{
+    Name    GargishFolsomDoorESW
+    xmod    0
+    ymod    0
+    script  door
+    doortype metal
+}
+
+Door 0x5148
+{
+    Name    GargishFolsomDoorENW
+    xmod    0
+    ymod    -1
+    script  door
+    doortype metal
 }
 
